Adding some basic Rust notes

--- a/android/SwitchActivities/app/src/main/res/layout/activity_main.xml
+++ b/android/SwitchActivities/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:text="New Button"
         android:id="@+id/button"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="141dp" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
